fix: word-wrapping in blog post containers

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -65,7 +65,6 @@ h1,
 h2,
 h3,
 p,
-div,
 span,
 a {
   overflow-wrap: break-word;
@@ -196,6 +195,13 @@ div.summary {
   text-decoration: none;
   display: block;
   padding: var(--spacing-ss);
+  word-break: unset;
+  word-wrap: unset;
+  overflow-wrap: unset;
+  -webkit-hyphens: unset;
+  -moz-hyphens: unset;
+  -ms-hyphens: unset;
+  hyphens: unset;
 }
 
 /* --- List & Cell Items --- */
@@ -211,6 +217,13 @@ div.summary {
   font-size: var(--fs-md);
   gap: var(--spacing-md);
   line-height: 1.4;
+  word-break: unset;
+  word-wrap: unset;
+  overflow-wrap: unset;
+  -webkit-hyphens: unset;
+  -moz-hyphens: unset;
+  -ms-hyphens: unset;
+  hyphens: unset;
 }
 
 .cell-container {
